--- a/Languages/ScriptingLanguages/React/README.adoc
+++ b/Languages/ScriptingLanguages/React/README.adoc
@@ -21,37 +21,7 @@
       comp3  4  5
 ```
 
-== Install & Run (Vite app=React)
-=== Install node and vscode
-```c
-Install nodejs: https://nodejs.org/en/download
-C:\Users\amitk>node -v
-v20.9.0
-
-Code Editor(VSCode): Extension: Prettier Code format extension
-```
-=== Run vite app 
-```c
-C:\Users\amitk\source\repos\React>npm create vite@4.1.0
-Need to install the following packages:
-create-vite@4.1.0
-Ok to proceed? (y)
-√ Project name: ... react-app
-√ Select a framework: » React
-√ Select a variant: » TypeScript
-
-Scaffolding project in C:\Users\amitk\source\repos\React\react-app...
-
-Done. Now run:
-
-  cd react-app
-  npm install
-  npm run dev
-C:\Users\amitk\source\repos\React\react-app> npm install
-C:\Users\amitk\source\repos\React\react-app> npm run dev
-VITE v4.5.0  ready in 2441 ms
-  ➜  Local:   http://localhost:5173/
-```
+== link:./Create_vite_app.adoc[Install React, Create Vite App]
 
 == Features
 === Add components to Page
