--- a/DS_Questions/Questions/vectors_arrays/Order_Arrangment/Sort_Integers_by_The_Number_of_1_Bits.adoc
+++ b/DS_Questions/Questions/vectors_arrays/Order_Arrangment/Sort_Integers_by_The_Number_of_1_Bits.adoc
@@ -1,7 +1,7 @@
 :toc:
 :toclevels: 6
 
-== 1356. Sort Integers by The Number of 1 Bits
+== link:https://leetcode.com/problems/sort-integers-by-the-number-of-1-bits[1356. Sort Integers by The Number of 1 Bits]
 You are given an integer array arr. Sort the integers in the array in ascending order by the number of 1's in their binary representation and in case of two or more integers have the same number of 1's you have to sort them in ascending order.
 
 Return the array after sorting it.
